--- a/sass/main.scss
+++ b/sass/main.scss
@@ -193,6 +193,7 @@ a {
     &__title{
         margin:2rem 4rem 0 4rem;
         font-weight: bold;
+        text-align: center;
     }
     &__txt{
         text-align: center;
